[package]
name = "blink-rs"
version = "0.1.0"
authors = ["czyt<czyt.go@gmail.com>"]
edition = "2021"
description = "tiny blink(1) LED lib"
keywords = ["blink", "blink-1"]
license = "MIT"
homepage = "https://github.com/lib-x/blink-rs"
repository = "https://github.com/lib-x/blink-rs.git"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb={version = "^0.9"}